-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 9
-
Component/s: hotspot
-
b30
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8083346 | emb-9 | Thomas Schatzl | P4 | Resolved | Fixed | b30 |
| JDK-8063438 | 8u45 | Thomas Schatzl | P4 | Resolved | Fixed | b01 |
| JDK-8056255 | 8u40 | Thomas Schatzl | P4 | Resolved | Fixed | b05 |
| JDK-8070989 | emb-8u47 | Thomas Schatzl | P4 | Resolved | Fixed | team |
The change added some assertion checking code that the next mark bitmap is clear if marking had been aborted, i.e.
if (!cm()->has_aborted()) {
SuspendibleThreadSetJoiner sts;
_cm->clearNextBitmap();
} else {
assert(!G1VerifyBitmaps || _cm->nextMarkBitmapIsClear(), "Next mark bitmap must be clear");
}
This code sometimes fails after Full GC:
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/home/tschatzl/Downloads/vmshare/cmm-decommit/src.9/src/share/vm/gc_implementation/g1/concurrentMarkThread.cpp:286), pid=39649, tid=140275789788928
# assert(!G1VerifyBitmaps || _cm->nextMarkBitmapIsClear()) failed: Next mark bitmap must be clear
#
# JRE version: Java(TM) SE Runtime Environment (9.0-b13) (build 1.9.0-ea-b13)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (1.9.0-fastdebug-internal mixed mode linux-amd64 compressed oops)
# Failed to write core dump. Core dumps have been disabled. To enable core dumping, try "ulimit -c unlimited" before starting Java again
#
# If you would like to submit a bug report, please visit:
# http://bugreport.sun.com/bugreport/crash.jsp
#
Can be reproduced fairly well (one out of 30 times?) with code that stresses concurrent marking a lot.
- backported by
-
JDK-8056255 Bitmap verification sometimes fails after Full GC aborts concurrent marking
-
- Resolved
-
-
JDK-8063438 Bitmap verification sometimes fails after Full GC aborts concurrent marking
-
- Resolved
-
-
JDK-8070989 Bitmap verification sometimes fails after Full GC aborts concurrent marking
-
- Resolved
-
-
JDK-8083346 Bitmap verification sometimes fails after Full GC aborts concurrent marking
-
- Resolved
-
- relates to
-
JDK-8210557 G1 next bitmap verification at the end of concurrent mark sometimes fails
-
- Closed
-
-
JDK-8048085 Aborting marking just before remark results in useless additional clearing of the next mark bitmap
-
- Resolved
-