8054808: Bitmap verification sometimes fails after Full GC aborts concurrent mark

The verification code that checked whether no bitmap mark had been found re-read HeapRegion::end() after the check on the bitmap. Concurrent humongous object allocation could have changed HeapRegion::end() in the meantime. Fix this by using the actual end of the region instead of HeapRegion::end() for comparison.

Reviewed-by: brutisso, jmasa